--- a/Homer_MVC/Views/Solicitudes/continuar.cshtml
+++ b/Homer_MVC/Views/Solicitudes/continuar.cshtml
@@ -302,6 +302,7 @@
 
                 if (err != "") {
                     err = err.slice(0, -1);
+                    //michael
                 }
 
                 if (cantI >= 1) {
